# polars-bigquery-client

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: test-integration.yml  test-python-integration.yml  test-python-rust.yml  test-python-unit.yml  test-rust-unit.yml
crates/polars-bigquery/: Cargo.toml
crates/polars-bigquery/src/: lib.rs
crates/polars-bigquery/tests/: integration_test.rs
polars_bigquery/: __init__.py  _read_bigquery.py
py-polars-bigquery/: Cargo.toml  pyproject.toml
py-polars-bigquery/polars_bigquery/: __init__.py  _read_bigquery.py  exceptions.py
py-polars-bigquery/polars_bigquery/core/: resource_references.py  run_query.py
py-polars-bigquery/src/: lib.rs
py-polars-bigquery/tests/benchmark/: test_read_bigquery.py  test_read_bigquery_benchmark.py
py-polars-bigquery/tests/system/: test_read_bigquery.py
py-polars-bigquery/tests/unit/: test_read_bigquery.py  test_run_query.py
src/: bigquery.rs  lib.rs
tests/: integration_test.rs
tests/system/: test_read_bigquery.py
