# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "polars-bigquery"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_bigquery"
crate-type= ["cdylib", "lib"]

[dependencies]
gcloud-sdk = { version = "0.27.4", features = ["google-cloud-bigquery-storage-v1"] }
polars = { version = "0.49.0", features = ["fmt", "dtype-date", "timezones", "lazy"], default-features = false }
polars-arrow = { version = "0.49.0", default-features = false }
polars-core = "0.49.0"
polars-io = { version="0.49.0", features = ["ipc", "ipc_streaming"] }
pyo3 = { version = "0.25", features = ["abi3-py310"] }
pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
pyo3-polars = { version = "0.22.0", features = ["derive", "lazy"] }
rand = { version = "0.8.5", features = [] }
regex = "1.11.2"
tokio = "1.47.1"
tracing = "0.1"
tracing-subscriber = { version ="0.3", features = ["env-filter"] }
