[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-bigquery"
version = "0.0.1"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "google-auth >= 2.40.3",
    "polars >= 1.14.0, < 2.0.0",
    "requests >= 2.33.0, < 3.0.0",
]

[dependency-groups]
dev = [
    "maturin>=1.13.1; platform_system != 'Linux'",
    "maturin[patchelf]>=1.13.1; platform_system == 'Linux'",
    "nodeenv>=1.9.1",
    "pre-commit>=4.3.0",
    "pyparsing>=2.4.7",
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.10",
]
test = [
    "maturin>=1.13.1; platform_system != 'Linux'",
    "maturin[patchelf]>=1.13.1; platform_system == 'Linux'",
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
    "pytest-xdist>=3.8.0",
]

[tool.maturin]
# Allow cargo test without failing on linking to Python.
# https://github.com/PyO3/pyo3/discussions/2271#discussioncomment-2497276
cargo-extra-args = "--features extension-module"

[tool.uv]
# https://github.com/PyO3/maturin/issues/2314#issuecomment-2488542771
# Rebuild package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]
